--- a/Frontend/Angular/tracking-Object-Changes-Using-Observable/package.json
+++ b/Frontend/Angular/tracking-Object-Changes-Using-Observable/package.json
@@ -24,7 +24,12 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "jquery": "^3.6.0",
+    "net": "^1.0.2",
     "rxjs": "~7.5.0",
+    "sass-loader": "^12.6.0",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -34,7 +39,10 @@
     "@angular/compiler-cli": "~13.2.0",
     "@angular/localize": "^13.2.3",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
